# msd-data-sonification-windchime

./: .gitignore  README.md  app.py  chime_mapper.py  chime_states.json  chime_update.py  client.py  current_chime_position.json  current_chime_position.py  final_truth.json  main_backend.py  scale_manager.py  test_full_pipeline.py  test_script.py  test_weather_mapper.py  time_helper.py  timetable_configs.json  tts_lines.json  uart_service.py  update.py  weather_mode_mapper.py
data/: chime_states.json  final_notes.json  weather_mood_config.json
frames/: chime_config.py  edit_timetable.py  home.py  mode_selection.py  monitor.py  preset.py  rotate_frame.py  timetable.py  weather_mood.py
motor_control_program/: CMakeLists.txt  encoder.c  encoder.h  main.c  motor_driver.c  motor_driver.h  uart_comm.c  uart_comm.h
motor_control_program_single_debug/: CMakeLists.txt  main.c  pico_sdk_import.cmake
services/: mood_service.py  tts_service.py  weather_service.py
